[package]
name = "cdn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["tracing", "macros"] }
cacache = { version = "13.0.0", features = ["tokio"] }
chrono = { version = "0.4.34", features = ["serde"] }
http-cache-semantics = "2.0.1"
lazy_static = "1.4.0"
miette = { version = "7.1.0", features = ["fancy"] }
reqwest = { version = "0.11.24", features = ["rustls-tls", "json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
