[package]
name = "slow-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
chrono = "0.4.34"
maud = { version = "0.26.0", features = ["actix-web"] }
tokio = { version = "1.36.0", features = ["full"] }
